tests/ui/endpoint/invalid_body_ty.stderr
error[E0277]: the trait bound `FooBody: OpenapiType` is not satisfied
  --> tests/ui/endpoint/invalid_body_ty.rs:15:16
   |
15 | fn endpoint(_: FooBody) {
   |                ^^^^^^^ the trait `OpenapiType` is not implemented for `FooBody`
   |
   = help: the following other types implement trait `OpenapiType`:
             &'a T
             ()
             BTreeMap<K, V>
             BTreeSet<T>
             CStr
             CString
             HashMap<K, V, S>
             HashSet<T, S>
           and 36 others
note: required by a bound in `gotham_restful::EndpointWithSchema::Body`
  --> src/endpoint.rs
   |
   |     type Body: RequestBody + Send;
   |                ^^^^^^^^^^^ required by this bound in `gotham_restful::EndpointWithSchema::Body`

error[E0277]: the trait bound `for<'de> FooBody: serde::de::Deserialize<'de>` is not satisfied
  --> tests/ui/endpoint/invalid_body_ty.rs:15:16
   |
15 | fn endpoint(_: FooBody) {
   |                ^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `FooBody`
   |
   = help: the following other types implement trait `serde::de::Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and 202 others
   = note: required because of the requirements on the impl of `serde::de::DeserializeOwned` for `FooBody`
   = note: required because of the requirements on the impl of `RequestBody` for `FooBody`
note: required by a bound in `gotham_restful::EndpointWithSchema::Body`
  --> src/endpoint.rs
   |
   |     type Body: RequestBody + Send;
   |                ^^^^^^^^^^^ required by this bound in `gotham_restful::EndpointWithSchema::Body`
